; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ixp2000/extr_caleb.c_caleb_reg_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ixp2000/extr_caleb.c_caleb_reg_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENP2611_CALEB_VIRT_BASE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @caleb_reg_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @caleb_reg_write(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store volatile i32 %1, i32* %4, align 4
  %6 = load volatile i32, i32* %4, align 4
  %7 = load i64, i64* @ENP2611_CALEB_VIRT_BASE, align 8
  %8 = load i32, i32* %3, align 4
  %9 = sext i32 %8 to i64
  %10 = add nsw i64 %7, %9
  %11 = inttoptr i64 %10 to i32*
  store volatile i32 %6, i32* %11, align 4
  %12 = load i64, i64* @ENP2611_CALEB_VIRT_BASE, align 8
  %13 = inttoptr i64 %12 to i32*
  %14 = load volatile i32, i32* %13, align 4
  store volatile i32 %14, i32* %5, align 4
  %15 = load volatile i32, i32* %5, align 4
  %16 = call i32 asm sideeffect "mov $0, $0", "=r,0,~{dirflag},~{fpsr},~{flags}"(i32 %15) #1, !srcloc !2
  store volatile i32 %16, i32* %5, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 426}
